# pytest-describe-beautifully

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-test.yml  publish.yml
src/pytest_describe_beautifully/: __init__.py  collector.py  html_reporter.py  model.py  naming.py  plugin.py  terminal_reporter.py
tests/: conftest.py  describe_collector.py  describe_html_reporter.py  describe_model.py  describe_naming.py  describe_plugin.py  describe_terminal_reporter.py
