[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-describe-beautifully"
version = "0.1.0"
description = "Beautiful terminal and HTML output for pytest-describe."
requires-python = ">=3.12"
dependencies = [
    "pytest>=7.0",
    "pytest-describe>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov",
    "mutmut",
    "ruff",
]

[project.entry-points.pytest11]
describe_beautifully = "pytest_describe_beautifully.plugin"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "C901", "S", "B", "PERF"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["N802", "C901", "S101", "S105", "S106", "S108", "PERF401"]
"tests/**/*.py" = ["N802", "C901", "S101", "S105", "S106", "S108", "PERF401"]

[tool.coverage.run]
branch = true
source = ["pytest_describe_beautifully"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.mutmut]
paths_to_mutate = "src/pytest_describe_beautifully/"
tests_dir = "tests/"
runner = "python -m pytest -x --tb=no -q"

[tool.pytest.ini_options]
python_files = ["describe_*.py"]
python_functions = ["it_*", "they_*"]
describe_prefixes = ["describe_"]
addopts = [
    "--strict-markers",
    "-ra",
    "--cov=pytest_describe_beautifully",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
]
testpaths = ["tests"]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]
